MyFirstProject/src/objects/Inventory__c.object
<CustomObject>
    <description>its 1st object</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Enter data</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_del__c</fullName>
        <description>it gives price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_quantity__c</fullName>
        <description>measure quantity</description>
        <label>Total quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>